Change icon bottom navigation and Add menu

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBgSplash">#FF3E71</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="gray">#CBCBCB</color>
+    <color name="bgBnv">#EC2128</color>
+
 </resources>
