--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,8 @@
             android:layout_alignParentBottom="true"
             android:background="@android:color/white"
             app:labelVisibilityMode="labeled"
+            app:itemIconTint="@color/custom_color"
+            app:itemTextColor="@color/custom_color"
             app:menu="@menu/bottom_nav_menu" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -28,9 +30,9 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/abc_vector_test"
-            android:tint="@color/colorPrimary"
-            app:backgroundTint="@android:color/white"
+            android:src="@drawable/ic_add_black_24dp"
+            android:tint="@color/colorWhite"
+            app:backgroundTint="@color/bgBnv"
             app:borderWidth="0dp"
             app:elevation="9dp" />
 
