--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="30dp"
             android:src="@drawable/ic_add_black_24dp"
             android:tint="@color/colorWhite"
-            app:backgroundTint="@color/bgBnv"
+            app:backgroundTint="@color/colorbgBnv"
             app:borderWidth="0dp"
             app:elevation="9dp" />
 
