--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,11 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBgSplash">#FF3E71</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorHitam">#000000</color>
     <color name="gray">#CBCBCB</color>
-    <color name="bgBnv">#EC2128</color>
+    <color name="ijonom">#31FFC5</color>
+    <color name="colorbgBnv">#EC2128</color>
+    <color name="colorbgHome">#FF5151</color>
+    <color name="colorbgBackgroundHome">#F3F4F7</color>
 
 </resources>
