--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorBgSplash">#FF3E71</color>
+    <color name="colorBgSplash">#FF5151</color>
     <color name="colorWhite">#ffffff</color>
     <color name="gray">#CBCBCB</color>
     <color name="bgBnv">#EC2128</color>
