--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,16 +70,17 @@
                 android:orientation="horizontal"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:scaleType="fitXY"
                     android:background="@color/gray"/>
                 <TextView
-                    android:layout_width="60dp"
+                    android:layout_width="55dp"
                     android:maxLines="2"
                     android:layout_height="wrap_content"
                     android:text="Peraturan dan Pasal"
                     android:layout_margin="10dp"
+                    android:textSize="12sp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginRight="32dp"
                     android:textColor="@color/colorHitam"
@@ -101,15 +102,16 @@
                 android:orientation="horizontal"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:scaleType="fitXY"
                     android:background="@color/gray"/>
                 <TextView
-                    android:layout_width="60dp"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:text="Daftar Point Pelanggaran"
                     android:layout_margin="10dp"
+                    android:textSize="12sp"
                     android:maxLines="2"
                     android:layout_marginEnd="32dp"
                     android:layout_marginRight="32dp"
@@ -132,8 +134,8 @@
                 android:orientation="horizontal"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:scaleType="fitXY"
                     android:background="@color/gray"/>
                 <TextView
@@ -142,6 +144,7 @@
                     android:text="Lihat Daftar Kelas"
                     android:layout_margin="10dp"
                     android:maxLines="2"
+                    android:textSize="12sp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginRight="32dp"
                     android:textColor="@color/colorHitam"
@@ -163,8 +166,8 @@
                 android:orientation="horizontal"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:scaleType="fitXY"
                     android:background="@color/gray"/>
                 <TextView
@@ -174,6 +177,7 @@
                     android:layout_margin="10dp"
                     android:layout_marginEnd="32dp"
                     android:maxLines="2"
+                    android:textSize="12sp"
                     android:layout_marginRight="32dp"
                     android:textColor="@color/colorHitam"
                     android:fontFamily="@font/roboto"/>
