--- a/app/src/main/res/layout-v21/fragment_profile.xml
+++ b/app/src/main/res/layout-v21/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="14dp"
-        android:text="Mapel"
+        android:text="@string/mapel"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -36,7 +36,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="50dp"
-        android:text="Nama Lengkap"
+        android:text="@string/nama_lengkap"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgprofile" />
@@ -48,7 +48,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="14dp"
-        android:text="Jumlah Pelaporan"
+        android:text="@string/jumlah_pelaporan"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -60,7 +60,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="50dp"
-        tools:text="TextView"
+        tools:text="@string/t"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -73,7 +73,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="14dp"
-        tools:text="TextView"
+        tools:text="@string/t"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -86,7 +86,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="14dp"
-        tools:text="TextView"
+        tools:text="@string/t"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -103,7 +103,7 @@
         android:textColor="@color/colorWhite"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:text="Bantuan"
+        android:text="@string/bantuan"
         android:background="@drawable/grey_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:layout_marginRight="24dp"
-        android:text="Keluar"
+        android:text="@string/keluar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_help" />
