--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,10 @@
         android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history_black_24dp"
         android:title="@string/history" />
-
+    <item
+        android:id="@+id/navigation_pengaduan"
+        android:icon="@drawable/ic_bag_state"
+        android:title="" />
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_trending_up_black_24dp"
