--- a/app/src/main/res/layout-large/fragment_home.xml
+++ b/app/src/main/res/layout-large/fragment_home.xml
@@ -33,8 +33,10 @@
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:iconifiedByDefault="false"
                 android:searchIcon="@drawable/sercing"
                 app:queryHint="Cari Nama Berdasarkan NIS"
+                android:queryHint="Cari Nama Berdasarkan NIS"
                 android:background="@drawable/background_search_home"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
