memperbaiki fragment_home.xml

--- a/app/src/main/res/layout-large/fragment_home.xml
+++ b/app/src/main/res/layout-large/fragment_home.xml
@@ -32,176 +32,185 @@
             <SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:iconifiedByDefault="false"
+                android:queryBackground="@drawable/background_search_home"
                 android:searchIcon="@drawable/sercing"
-                app:queryHint="Cari Nama Berdasarkan NIS"
-                android:queryHint="Cari Nama Berdasarkan NIS"
+                android:queryHint="Cari Nama Berdasarkan Nis"
                 android:background="@drawable/background_search_home"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginTop="16sp"/>
         </LinearLayout>
     </FrameLayout>
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fitur Buku Sakuku"
-        android:textColor="@color/colorHitam"
-        android:fontFamily="@font/roboto"
-        android:textSize="20sp"
-        android:layout_margin="19dp"/>
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:rowCount="2"
-        android:layout_gravity="center"
-        android:columnCount="2">
-        <androidx.cardview.widget.CardView
-            android:layout_height="95dp"
-            android:layout_width="match_parent"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="7dp"
-            android:layout_margin="10dp"
-            android:background="@color/colorWhite">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:scaleType="fitXY"
-                    android:background="@color/gray"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Peraturan dan Pasal"
-                    android:layout_margin="10dp"
-                    android:layout_marginEnd="32dp"
-                    android:maxLines="2"
-                    android:layout_marginRight="32dp"
-                    android:textColor="@color/colorHitam"
-                    android:fontFamily="@font/roboto"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_height="95dp"
-            android:layout_width="match_parent"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="7dp"
-            android:layout_margin="10dp"
-            android:background="@color/colorWhite">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:scaleType="fitXY"
-                    android:background="@color/gray"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Daftar Point Pelanggaran"
-                    android:layout_margin="10dp"
-                    android:maxLines="2"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginRight="32dp"
-                    android:textColor="@color/colorHitam"
-                    android:fontFamily="@font/roboto"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_height="95dp"
-            android:layout_width="match_parent"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="7dp"
-            android:layout_margin="10dp"
-            android:background="@color/colorWhite">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:scaleType="fitXY"
-                    android:background="@color/gray"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Lihat Daftar Kelas"
-                    android:layout_margin="10dp"
-                    android:maxLines="2"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginRight="32dp"
-                    android:textColor="@color/colorHitam"
-                    android:fontFamily="@font/roboto"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_height="95dp"
-            android:layout_width="match_parent"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="7dp"
-            android:layout_margin="10dp"
-            android:background="@color/colorWhite">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:scaleType="fitXY"
-                    android:background="@color/gray"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Fitur Lainya"
-                    android:layout_margin="10dp"
-                    android:maxLines="2"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginRight="32dp"
-                    android:textColor="@color/colorHitam"
-                    android:fontFamily="@font/roboto"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </GridLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aktivitas Terbaru"
-            android:fontFamily="@font/roboto"
-            android:textSize="20sp"
-            android:textColor="@color/colorHitam"
-            android:layout_margin="19dp"/>
-        <androidx.recyclerview.widget.RecyclerView
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"
-            tools:listitem="@layout/item_aktivitas_new"/>
-    </LinearLayout>
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fitur Buku Sakuku"
+                android:textColor="@color/colorHitam"
+                android:fontFamily="@font/roboto"
+                android:textSize="20sp"
+                android:layout_margin="19dp"/>
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rowCount="2"
+                android:layout_gravity="center"
+                android:columnCount="2">
+                <androidx.cardview.widget.CardView
+                    android:layout_height="95dp"
+                    android:layout_width="match_parent"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="7dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/colorWhite">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:scaleType="fitXY"
+                            android:background="@color/gray"/>
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Peraturan dan Pasal"
+                            android:layout_margin="10dp"
+                            android:layout_marginEnd="32dp"
+                            android:maxLines="2"
+                            android:layout_marginRight="32dp"
+                            android:textColor="@color/colorHitam"
+                            android:fontFamily="@font/roboto"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_height="95dp"
+                    android:layout_width="match_parent"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="7dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/colorWhite">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:scaleType="fitXY"
+                            android:background="@color/gray"/>
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Daftar Point Pelanggaran"
+                            android:layout_margin="10dp"
+                            android:maxLines="2"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginRight="32dp"
+                            android:textColor="@color/colorHitam"
+                            android:fontFamily="@font/roboto"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_height="95dp"
+                    android:layout_width="match_parent"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="7dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/colorWhite">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:scaleType="fitXY"
+                            android:background="@color/gray"/>
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Lihat Daftar Kelas"
+                            android:layout_margin="10dp"
+                            android:maxLines="2"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginRight="32dp"
+                            android:textColor="@color/colorHitam"
+                            android:fontFamily="@font/roboto"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_height="95dp"
+                    android:layout_width="match_parent"
+                    app:cardElevation="6dp"
+                    app:cardCornerRadius="7dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/colorWhite">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:scaleType="fitXY"
+                            android:background="@color/gray"/>
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Fitur Lainya"
+                            android:layout_margin="10dp"
+                            android:maxLines="2"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginRight="32dp"
+                            android:textColor="@color/colorHitam"
+                            android:fontFamily="@font/roboto"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </GridLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Aktivitas Terbaru"
+                    android:fontFamily="@font/roboto"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorHitam"
+                    android:layout_margin="19dp"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="vertical"
+                    tools:listitem="@layout/item_aktivitas_new"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
