--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,32 +8,36 @@
     android:background="@color/colorbgBackgroundHome"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        android:layout_height="160dp"
+        android:id="@+id/appBar">
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:background="@color/colorbgHome"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:id="@+id/collapsing"
+            app:contentScrim="@color/colorbgHome"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll">
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                app:layout_collapseMode="parallax"
+                android:background="@color/colorbgHome"
+                android:layout_height="?attr/actionBarSize"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LOGO"
+                android:text="Bukusaku"
                 android:fontFamily="@font/roboto"
                 android:textColor="@color/colorWhite"
                 android:textSize="24sp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="75dp"
                 android:textStyle="bold"/>
             <SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:iconifiedByDefault="false"
                 android:queryBackground="@drawable/background_search_home"
                 android:searchIcon="@drawable/sercing"
@@ -40,12 +45,14 @@
                 android:background="@drawable/background_search_home"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginTop="16sp"/>
-        </LinearLayout>
-    </FrameLayout>
+                android:layout_marginTop="110dp"/>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="55dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -53,11 +60,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fitur Buku Sakuku"
+                android:text="@string/fitur_buku_sakuku"
                 android:textColor="@color/colorHitam"
                 android:fontFamily="@font/roboto"
                 android:textSize="20sp"
-                android:layout_margin="19dp"/>
+                android:layout_margin="15dp"/>
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -200,13 +207,13 @@
                 android:layout_marginTop="15dp"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aktivitas Terbaru"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/aktivitas_terbaru"
                     android:fontFamily="@font/roboto"
                     android:textSize="20sp"
                     android:textColor="@color/colorHitam"
-                    android:layout_margin="19dp"/>
+                    android:layout_margin="15dp"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -217,4 +224,4 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
